# PDF-OCR-Automation

./: .editorconfig  .env  .gitignore  .processing_status.json  AUDIT_COMPLETION_REPORT.txt  CLEANUP_MANIFEST.md  COMMIT_PLANNING.md  CONTRIBUTING.md  ESTATE_RESEARCH_NAMING_UPDATE.txt  FINAL_AUDIT_COMPLETE.txt  GEMINI_2.5_UPDATE.txt  GITHUB_SETUP_COMMANDS.txt  GUI-PDFOCRProcessor.ps1  Invoice-OCR-Processor.ps1  LICENSE  Makefile  Move-BackupFiles.ps1  NAMING_CONVENTION_STANDARD.md  OCR-OPTIMIZATION.md  OCR_FIX_UPDATE.txt  PDF-OCR-Processor.ps1  PDFOCRAutomation.psd1  PROJECT-STRUCTURE.md  Process-Estate-Batch.ps1  Process-Estate-Complete-V2.ps1  Process-Estate-OCR-And-Rename.ps1  Process-Estate-Research-Complete.ps1  Process-Estate-Research-Fixed.ps1  Process-PDFs-Complete.ps1  Quick-OCR-Fix.ps1  Quick-Start.ps1  README.md  Restore-CommPDFs.ps1  SECURITY_FIX.txt  SOP_V2.1_IMPLEMENTATION_UPDATE.txt  SUMMARY.md  SYSTEM_UPDATE_SUMMARY.txt  Setup-API-Key.ps1  Setup.ps1  TESTING_DOCUMENTATION.md  (+76 more)
.claude/: settings.local.json
Archive/: CLEANUP-PROJECT.ps1  README-OLD.md
Documentation/: COMPLETE_PROJECT_SUMMARY_20250723_002815.md  OCR-FUNCTIONALITY-TEST-RESULTS.md  QUICK-START-GUIDE.md  TROUBLESHOOTING.md
Documents/: test-document.txt
Examples/: Invoice-OCR-Example.ps1
Installation/: install_ocr_tools.ps1
Templates/: Config-Template.ps1  Universal-OCR-Template.ps1
Test-PDFs/: Create-TestContent.ps1  Generate-TestPDFs.ps1  Test-LegalDocument.html
Tests/: Test-OCRPerformance.ps1  Test-PDFOCRProcessor.ps1
archive/: ARCHIVE_CONTENTS.md  deprecated
config/: default.json  env.example
docs/: ARCHITECTURE.md  CHANGELOG.md  CLEANUP_REPORT.md  DEPLOYMENT.md  OCR-BEST-PRACTICES.md  OCR_PDFS_UTILITY.md  QUICK-START-GUIDE.md  TROUBLESHOOTING.md
logs/: estate_processing_log_20250723_002003.json
samples/: Test-Invoice.html  Test-Invoice.txt  (+3 more)
(+106 files in other folders)
